force-app/main/default/objects/Quiz_Response__c/Quiz_Response__c.object-meta.xml
<CustomObject>
    <description>Represents a learner&apos;s answer to a single quiz question</description>
    <label>Quiz Response</label>
    <nameField>
        <displayFormat>RESP-{00000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>