force-app/main/default/objects/Quiz_Response__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this answer was correct</description>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>