force-app/main/default/objects/Quiz_Response__c/fields/Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Points earned for this response</description>
    <label>Points Earned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>