force-app/main/default/objects/Quiz_Response__c/fields/Quiz_Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The answer option selected by the learner</description>
    <inlineHelpText>The chosen answer option for multiple choice questions</inlineHelpText>
    <label>Quiz Answer Option</label>
    <referenceTo>Quiz_Answer_Option__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>