force-app/main/default/objects/Quiz_Response__c/fields/Quiz_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Attempt__c</fullName>
    <description>The quiz attempt this response belongs to</description>
    <label>Quiz Attempt</label>
    <referenceTo>Quiz_Attempt__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>