force-app/main/default/objects/Quiz_Response__c/fields/Quiz_Question__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The question being answered</description>
    <label>Quiz Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>